# hello

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: os.yml  release.yml  web.yml
res/: res.qrc
src/: Subscriber.cpp  Subscriber.h  analogclock.cpp  analogclock.h  app.cpp  clock.cpp  clock.h  qmqtt_client.cpp  qmqtt_client.h  qmqtt_client_p.cpp  qmqtt_client_p.h  qmqtt_global.h  qmqtt_network.cpp  qmqtt_websocket.cpp  qmqtt_websocket_p.h  win.cpp  win.h
